UserMessage transparent support!
CK.TypeScript now maps C# UserMessage type
to SimpleUserMessage TS type.
And the SimpleUserMessage can deserialize
the 8-cells array of a UserMessage in addition
to the regular 3-cells array [level,text,depth] of
the SimpleUserMessage. This guaranties that even
when the backend outputs Json UserMessages, the
TypeScript can read back its SimpleUserMessages.

--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -20,7 +20,7 @@
         in AssemblyInfo.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.TypeScript" Version="0.21.0" />
+    <PackageReference Include="CK.TypeScript" Version="0.0.0.0--056t7c4-explo" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
