--- a/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
+++ b/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
@@ -3,7 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Ng.Axios" Version="0.21.0" />
+    <PackageReference Include="CK.Ng.Axios" Version="0.0.0.0--056t7c4-explo" />
+    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.0.0.0--056t7c4-explo" />
+    <PackageReference Include="CK.TS.Angular.Engine" Version="0.0.0.0--056t7c4-explo" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
