CI build: Upgrading dependencies:
NuGet:CK.AppIdentity.Hosting/0.6.1--0001-develop
NuGet:CK.Testing.TypeScriptEngine/0.21.1--0006-develop
NuGet:CK.Testing.Nunit/11.0.1--0001-develop
NuGet:CK.Testing.AspNetServer.Auth/24.1.1--0001-develop
NuGet:CK.TS.Angular.Engine/0.21.1--0006-develop
NuGet:CK.Ng.Axios/0.21.1--0006-develop
NuGet:CK.Testing.TypeScriptEngine/0.21.1--0006-develop
NuGet:CK.TS.Angular.Engine/0.21.1--0006-develop
NuGet:CK.TS.AspNet.Auth/0.21.1--0006-develop
NuGet:CK.Ng.Axios/0.21.1--0006-develop
NuGet:CK.Testing.TypeScriptEngine/0.21.1--0006-develop
NuGet:CK.TS.Angular.Engine/0.21.1--0006-develop
NuGet:CK.AspNet.Auth/24.1.1--0001-develop
NuGet:CK.Auth.Abstractions/8.0.1--0001-develop
NuGet:CK.Auth.Abstractions/8.0.1--0001-develop
NuGet:CK.Testing.NUnit/11.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/27.0.1--0002-develop
NuGet:CK.Testing.AspNetServer.Auth/24.1.1--0001-develop
NuGet:CK.AppIdentity.Hosting/0.6.1--0001-develop
NuGet:CK.AppIdentity/0.6.1--0001-develop
NuGet:CK.Poco.Exc.Json/27.0.1--0002-develop
NuGet:CK.Testing.StObjEngine/27.0.1--0002-develop
NuGet:CK.Testing.Nunit/11.0.1--0001-develop
NuGet:CK.TypeScript/0.21.1--0006-develop
NuGet:CK.Testing.TypeScriptEngine/0.21.1--0006-develop
NuGet:CK.Testing.Nunit/11.0.1--0001-develop
NuGet:CK.Testing.AspNetServer.Auth/24.1.1--0001-develop
NuGet:CK.TypeScript.Engine/0.21.1--0006-develop
NuGet:CK.Testing.StObjEngine/27.0.1--0002-develop
NuGet:CK.Testing.Nunit/11.0.1--0001-develop
NuGet:CK.CodeGen/11.0.1--0001-develop
NuGet:CK.StObj.Runtime/27.0.1--0002-develop
NuGet:CK.PerfectEvent/23.0.1--0001-develop
NuGet:CK.Globalization/0.8.1--0003-develop
NuGet:CK.StObj.Model/27.0.1--0002-develop
NuGet:CK.Auth.Abstractions/8.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/27.0.1--0002-develop
NuGet:CK.Testing.Nunit/11.0.1--0001-develop.

--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -20,7 +20,7 @@
         in AssemblyInfo.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.TypeScript" Version="0.0.0.0--056t7c4-explo" />
+    <PackageReference Include="CK.TypeScript" Version="0.21.1--0006-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
