--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -8,12 +8,12 @@
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.0.0.0--056t7c4-explo" />
-    <PackageReference Include="CK.Testing.Nunit" Version="11.0.0" />
+    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.21.1--0006-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="11.0.1--0001-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <!-- We also test CK.Cris.Auth here. -->
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="24.1.0" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="24.1.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
