--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="11.0.0" />
-    <PackageReference Include="CK.StObj.Runtime" Version="28.0.0" />
+    <PackageReference Include="CK.CodeGen" Version="11.0.1--0008-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="28.0.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
