--- a/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
+++ b/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Ng.Axios" Version="0.22.0" />
-    <PackageReference Include="CK.TS.Angular.Engine" Version="0.22.0" />
+    <PackageReference Include="CK.Ng.Axios" Version="0.22.1--0002-develop" />
+    <PackageReference Include="CK.TS.Angular.Engine" Version="0.22.1--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
