--- a/CK.Ng.Cris.AspNet.Auth/CK.Ng.Cris.AspNet.Auth.csproj
+++ b/CK.Ng.Cris.AspNet.Auth/CK.Ng.Cris.AspNet.Auth.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="CK.EmbeddedResources.Abstractions" Version="0.22.1--0014-develop" />
-        <PackageReference Include="CK.TS.AspNet.Auth" Version="0.22.1--0014-develop" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\CK.Ng.Cris.AspNet\CK.Ng.Cris.AspNet.csproj" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CK.EmbeddedResources.Abstractions" Version="0.23.0" />
+    <PackageReference Include="CK.TS.AspNet.Auth" Version="0.23.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CK.Ng.Cris.AspNet\CK.Ng.Cris.AspNet.csproj" />
+  </ItemGroup>
 </Project>
