Releasing 0.37.0. Upgrading release dependencies: NuGet:CK.AppIdentity.Hosting/0.8.0, NuGet:CK.Testing.TypeScriptEngine/0.24.0, NuGet:CK.Testing.Nunit/12.0.0, NuGet:CK.Testing.AspNetServer.Auth/26.0.0, NuGet:CK.TS.Angular.Engine/0.24.0, NuGet:CK.EmbeddedResources.Abstractions/0.24.0, NuGet:CK.TS.AspNet.Auth/0.24.0, NuGet:CK.Ng.Axios/0.24.0, NuGet:CK.AspNet.Auth/26.0.0, NuGet:CK.Auth.Abstractions/9.0.0, NuGet:CK.Auth.Abstractions/9.0.0, NuGet:CK.Testing.NUnit/12.0.0, NuGet:CK.Testing.StObjEngine/29.0.0, NuGet:CK.Testing.AspNetServer.Auth/26.0.0, NuGet:CK.AppIdentity.Hosting/0.8.0, NuGet:CK.AppIdentity/0.8.0, NuGet:CK.Poco.Exc.Json/29.0.0, NuGet:CK.Testing.StObjEngine/29.0.0, NuGet:CK.Testing.Nunit/12.0.0, NuGet:CK.TypeScript/0.24.0, NuGet:CK.Testing.TypeScriptEngine/0.24.0, NuGet:CK.Testing.Nunit/12.0.0, NuGet:CK.Testing.AspNetServer.Auth/26.0.0, NuGet:CK.TypeScript.Engine/0.24.0, NuGet:CK.Testing.StObjEngine/29.0.0, NuGet:CK.Testing.Nunit/12.0.0, NuGet:CK.CodeGen/12.0.0, NuGet:CK.StObj.Runtime/29.0.0, NuGet:CK.PerfectEvent/24.0.0, NuGet:CK.Globalization/2.0.0, NuGet:CK.StObj.Model/29.0.0, NuGet:CK.Auth.Abstractions/9.0.0, NuGet:CK.Testing.StObjEngine/29.0.0, NuGet:CK.Testing.Nunit/12.0.0.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.7.1--0019-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="28.1.1--0026-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.8.0" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="29.0.0" />
     <PackageReference Include="Polly.Core" Version="8.5.0" />
   </ItemGroup>
   <ItemGroup>
