--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="11.1.1--0015-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="28.1.1--0026-develop" />
+    <PackageReference Include="CK.CodeGen" Version="12.0.0" />
+    <PackageReference Include="CK.StObj.Runtime" Version="29.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
