--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="1.1.1--0018-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="28.1.1--0026-develop" />
+    <PackageReference Include="CK.Globalization" Version="2.0.0" />
+    <PackageReference Include="CK.StObj.Model" Version="29.0.0" />
   </ItemGroup>
 </Project>
