--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,9 +4,9 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="8.1.1--0018-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="28.1.1--0026-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="11.1.1--0024-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="9.0.0" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="29.0.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="12.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
