--- a/Tests/CK.Ng.Cris.AspNet.Auth.Tests/CK.Ng.Cris.AspNet.Auth.Tests.csproj
+++ b/Tests/CK.Ng.Cris.AspNet.Auth.Tests/CK.Ng.Cris.AspNet.Auth.Tests.csproj
@@ -4,11 +4,11 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.7.1--0019-develop" />
-    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.23.1--0034-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="11.1.1--0024-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="25.1.1--0035-develop" />
-    <PackageReference Include="CK.TS.Angular.Engine" Version="0.23.1--0034-develop" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.8.0" />
+    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.24.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="12.0.0" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="26.0.0" />
+    <PackageReference Include="CK.TS.Angular.Engine" Version="0.24.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
