--- a/CK.Ng.Cris.AspNet.Auth/CK.Ng.Cris.AspNet.Auth.csproj
+++ b/CK.Ng.Cris.AspNet.Auth/CK.Ng.Cris.AspNet.Auth.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.EmbeddedResources.Abstractions" Version="0.25.0" />
-    <PackageReference Include="CK.TS.AspNet.Auth" Version="0.25.0" />
+    <PackageReference Include="CK.TS.AspNet.Auth" Version="0.0.0--05f1ef7-explo" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Ng.Cris.AspNet\CK.Ng.Cris.AspNet.csproj" />
