--- a/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
+++ b/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Ng.Axios" Version="0.0.0--05f1ef7-explo" />
+    <PackageReference Include="CK.Ng.Axios" Version="0.0.0--05f3sf5-explo" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
