--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="2.1.0" />
-    <PackageReference Include="CK.StObj.Model" Version="29.1.0" />
+    <PackageReference Include="CK.Globalization" Version="2.1.1--0001-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="29.1.1--0004-develop" />
   </ItemGroup>
 </Project>
