--- a/CK.IO.Auth/CK.IO.Auth.csproj
+++ b/CK.IO.Auth/CK.IO.Auth.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="9.1.0" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="9.1.1--0001-develop" />
   </ItemGroup>
 </Project>
