Releasing 0.39.0. Upgrading release dependencies: NuGet:CK.AppIdentity.Hosting/0.10.0, NuGet:CK.Testing.TypeScriptEngine/0.26.0, NuGet:CK.Testing.Nunit/13.0.0, NuGet:CK.Testing.AspNetServer.Auth/27.0.0, NuGet:CK.TS.Angular.Engine/0.26.0, NuGet:CK.EmbeddedResources.Abstractions/0.26.0, NuGet:CK.TS.AspNet.Auth/0.26.0, NuGet:CK.Ng.Axios/0.26.0, NuGet:CK.AspNet.Auth/27.0.0, NuGet:CK.Auth.Abstractions/10.0.0, NuGet:CK.Auth.Abstractions/10.0.0, NuGet:CK.Testing.NUnit/13.0.0, NuGet:CK.Testing.StObjEngine/30.0.0, NuGet:CK.Testing.AspNetServer.Auth/27.0.0, NuGet:CK.AppIdentity.Hosting/0.10.0, NuGet:CK.AppIdentity/0.10.0, NuGet:CK.Poco.Exc.Json/30.0.0, NuGet:CK.Testing.StObjEngine/30.0.0, NuGet:CK.Testing.Nunit/13.0.0, NuGet:CK.TypeScript/0.26.0, NuGet:CK.Testing.TypeScriptEngine/0.26.0, NuGet:CK.Testing.Nunit/13.0.0, NuGet:CK.Testing.AspNetServer.Auth/27.0.0, NuGet:CK.TypeScript.Engine/0.26.0, NuGet:CK.Testing.StObjEngine/30.0.0, NuGet:CK.Testing.Nunit/13.0.0, NuGet:CK.CodeGen/13.0.0, NuGet:CK.StObj.Runtime/30.0.0, NuGet:CK.PerfectEvent/25.0.0, NuGet:CK.Globalization/3.0.0, NuGet:CK.StObj.Model/30.0.0, NuGet:CK.Auth.Abstractions/10.0.0, NuGet:CK.Testing.StObjEngine/30.0.0, NuGet:CK.Testing.Nunit/13.0.0.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.9.1--0003-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="29.1.1--0007-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.10.0" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.0" />
     <PackageReference Include="Polly.Core" Version="8.5.0" />
   </ItemGroup>
   <ItemGroup>
