--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="2.1.1--0003-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="29.1.1--0007-develop" />
+    <PackageReference Include="CK.Globalization" Version="3.0.0" />
+    <PackageReference Include="CK.StObj.Model" Version="30.0.0" />
   </ItemGroup>
 </Project>
