--- a/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
+++ b/CK.Ng.Cris.AspNet/CK.Ng.Cris.AspNet.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Ng.Axios" Version="0.25.1--0007-develop" />
+    <PackageReference Include="CK.Ng.Axios" Version="0.26.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
