--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,9 +4,9 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="9.1.1--0003-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="29.1.1--0007-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="12.1.1--0003-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="10.0.0" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="30.0.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="13.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
