--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -4,14 +4,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.NUnit" Version="12.1.1--0003-develop" />
+    <PackageReference Include="CK.Testing.NUnit" Version="13.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="29.1.1--0007-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="26.1.1--0005-develop" />
-    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.9.1--0003-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="30.0.0" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="27.0.0" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.10.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
