--- a/Tests/CK.Ng.Cris.AspNet.Auth.Tests/CK.Ng.Cris.AspNet.Auth.Tests.csproj
+++ b/Tests/CK.Ng.Cris.AspNet.Auth.Tests/CK.Ng.Cris.AspNet.Auth.Tests.csproj
@@ -4,11 +4,11 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.9.1--0003-develop" />
-    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.25.1--0007-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="12.1.1--0003-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="26.1.1--0005-develop" />
-    <PackageReference Include="CK.TS.Angular.Engine" Version="0.25.1--0007-develop" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.10.0" />
+    <PackageReference Include="CK.Testing.TypeScriptEngine" Version="0.26.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="13.0.0" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="27.0.0" />
+    <PackageReference Include="CK.TS.Angular.Engine" Version="0.26.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
