CI build: Upgrading dependencies:
NuGet:CK.Auth.Abstractions/10.0.1--0001-develop
NuGet:CK.Auth.Abstractions/10.0.1--0001-develop
NuGet:CK.AppIdentity/0.10.1--0001-develop
NuGet:CK.Poco.Exc.Json/30.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0001-develop
NuGet:CK.Testing.Nunit/13.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0001-develop
NuGet:CK.Testing.Nunit/13.0.1--0001-develop
NuGet:CK.CodeGen/13.0.1--0001-develop
NuGet:CK.StObj.Runtime/30.0.1--0001-develop
NuGet:CK.PerfectEvent/25.0.1--0001-develop
NuGet:CK.Globalization/3.0.1--0001-develop
NuGet:CK.StObj.Model/30.0.1--0001-develop
NuGet:CK.Auth.Abstractions/10.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0001-develop
NuGet:CK.Testing.Nunit/13.0.1--0001-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="13.0.0" />
-    <PackageReference Include="CK.StObj.Runtime" Version="30.0.0" />
+    <PackageReference Include="CK.CodeGen" Version="13.0.1--0001-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="30.0.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
