--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.10.0" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.0" />
+    <PackageReference Include="CK.AppIdentity" Version="0.10.1--0001-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.1--0001-develop" />
     <PackageReference Include="Polly.Core" Version="8.5.0" />
   </ItemGroup>
   <ItemGroup>
