--- a/CK.Cris.DelayedCommand/CK.Cris.DelayedCommand.csproj
+++ b/CK.Cris.DelayedCommand/CK.Cris.DelayedCommand.csproj
@@ -2,9 +2,11 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="CK.Cris" Version="0.39.2--0003-develop" />
+        <PackageReference Include="CK.IO.DelayedCommand" Version="0.39.2--0003-develop" />
+    </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.BackgroundExecutor\CK.Cris.BackgroundExecutor.csproj" />
-    <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <ProjectReference Include="..\CK.IO.DelayedCommand\CK.IO.DelayedCommand.csproj" />
   </ItemGroup>
 </Project>
