--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>CK.Setup.Cris</RootNamespace>
-    <LangVersion>11</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="13.0.1--0003-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="30.0.1--0010-develop" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="CK.Cris" Version="0.39.2--0003-develop" />
+        <PackageReference Include="CK.CodeGen" Version="13.0.1--0003-develop" />
+        <PackageReference Include="CK.StObj.Runtime" Version="30.0.1--0010-develop" />
+    </ItemGroup>
 </Project>
