CI build: Upgrading dependencies:
NuGet:CK.Cris/0.0.0--05isxfy-develop
NuGet:CK.IO.DelayedCommand/0.0.0--05isxfy-develop
NuGet:CK.Auth.Abstractions/10.0.1--0006-develop
NuGet:CK.IO.Auth/0.0.0--05isxfy-develop
NuGet:CK.IO.Auth.Basic/0.0.0--05isxfy-develop
NuGet:CK.AppIdentity/0.10.1--0005-develop
NuGet:CK.Poco.Exc.Json/30.0.1--0011-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0011-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0011-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop
NuGet:CK.Cris/0.0.0--05isxfy-develop
NuGet:CK.CodeGen/13.0.1--0005-develop
NuGet:CK.StObj.Runtime/30.0.1--0011-develop
NuGet:CK.Cris/0.0.0--05isxfy-develop
NuGet:CK.PerfectEvent/25.0.1--0004-develop
NuGet:CK.Auth.Abstractions/10.0.1--0006-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0011-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop.

--- a/CK.Cris.DelayedCommand/CK.Cris.DelayedCommand.csproj
+++ b/CK.Cris.DelayedCommand/CK.Cris.DelayedCommand.csproj
@@ -2,10 +2,10 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="CK.Cris" Version="0.39.2--0003-develop" />
-        <PackageReference Include="CK.IO.DelayedCommand" Version="0.39.2--0003-develop" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CK.Cris" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.IO.DelayedCommand" Version="0.0.0--05isxfy-develop" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.BackgroundExecutor\CK.Cris.BackgroundExecutor.csproj" />
   </ItemGroup>
