--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="10.0.1--0004-develop" />
-    <PackageReference Include="CK.IO.Auth" Version="0.39.2--0003-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="10.0.1--0006-develop" />
+    <PackageReference Include="CK.IO.Auth" Version="0.0.0--05isxfy-develop" />
   </ItemGroup>
 </Project>
