--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>CK.Cris</RootNamespace>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="CK.Cris" Version="0.39.2--0003-develop" />
-        <PackageReference Include="CK.PerfectEvent" Version="25.0.1--0003-develop" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>CK.Cris</RootNamespace>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CK.Cris" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="25.0.1--0004-develop" />
+  </ItemGroup>
 </Project>
