--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="CK.IO.Auth.Basic" Version="0.39.2--0003-develop" />
-        <PackageReference Include="CK.AppIdentity" Version="0.10.1--0004-develop" />
-        <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.1--0010-develop" />
-        <PackageReference Include="Polly.Core" Version="8.5.0" />
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CK.IO.Auth.Basic" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.10.1--0005-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.1--0011-develop" />
+    <PackageReference Include="Polly.Core" Version="8.5.0" />
+  </ItemGroup>
 </Project>
