CI build: Upgrading dependencies:
NuGet:CK.Cris/0.0.0--05it0jf-develop
NuGet:CK.IO.DelayedCommand/0.0.0--05it0jf-develop
NuGet:CK.Auth.Abstractions/10.0.1--0006-develop
NuGet:CK.IO.Auth/0.0.0--05it0jf-develop
NuGet:CK.IO.Auth.Basic/0.0.0--05it0jf-develop
NuGet:CK.AppIdentity/0.10.1--0005-develop
NuGet:CK.Poco.Exc.Json/30.0.1--0012-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0012-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0012-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop
NuGet:CK.Cris/0.0.0--05it0jf-develop
NuGet:CK.CodeGen/13.0.1--0005-develop
NuGet:CK.StObj.Runtime/30.0.1--0012-develop
NuGet:CK.Cris/0.0.0--05it0jf-develop
NuGet:CK.PerfectEvent/25.0.1--0004-develop
NuGet:CK.Auth.Abstractions/10.0.1--0006-develop
NuGet:CK.Testing.StObjEngine/30.0.1--0012-develop
NuGet:CK.Testing.Nunit/13.0.1--0005-develop.

--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Auth.Abstractions" Version="10.0.1--0006-develop" />
-    <PackageReference Include="CK.IO.Auth" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.IO.Auth" Version="0.0.0--05it0jf-develop" />
   </ItemGroup>
 </Project>
