--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Cris" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.Cris" Version="0.0.0--05it0jf-develop" />
     <PackageReference Include="CK.CodeGen" Version="13.0.1--0005-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="30.0.1--0011-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="30.0.1--0012-develop" />
   </ItemGroup>
 </Project>
