--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Cris" Version="0.0.0--05isxfy-develop" />
+    <PackageReference Include="CK.Cris" Version="0.0.0--05it0jf-develop" />
     <PackageReference Include="CK.PerfectEvent" Version="25.0.1--0004-develop" />
   </ItemGroup>
 </Project>
