Releasing 0.40.0. Upgrading release dependencies: NuGet:CK.Cris/0.40.0, NuGet:CK.IO.DelayedCommand/0.40.0, NuGet:CK.Auth.Abstractions/11.0.0, NuGet:CK.IO.Auth/0.40.0, NuGet:CK.IO.Auth.Basic/0.40.0, NuGet:CK.AppIdentity/0.11.0, NuGet:CK.Poco.Exc.Json/31.0.0, NuGet:CK.Testing.StObjEngine/31.0.0, NuGet:CK.Testing.Nunit/14.0.0, NuGet:CK.Testing.StObjEngine/31.0.0, NuGet:CK.Testing.Nunit/14.0.0, NuGet:CK.Cris/0.40.0, NuGet:CK.CodeGen/14.0.0, NuGet:CK.StObj.Runtime/31.0.0, NuGet:CK.Cris/0.40.0, NuGet:CK.PerfectEvent/26.0.0, NuGet:CK.Auth.Abstractions/11.0.0, NuGet:CK.Testing.StObjEngine/31.0.0, NuGet:CK.Testing.Nunit/14.0.0.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.IO.Auth.Basic" Version="0.39.3--0032-develop" />
-    <PackageReference Include="CK.AppIdentity" Version="0.10.1--0022-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="30.0.1--0055-develop" />
+    <PackageReference Include="CK.IO.Auth.Basic" Version="0.40.0" />
+    <PackageReference Include="CK.AppIdentity" Version="0.11.0" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="31.0.0" />
     <PackageReference Include="Polly.Core" Version="8.6.3" />
   </ItemGroup>
 </Project>
