--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="10.0.1--0022-develop" />
-    <PackageReference Include="CK.IO.Auth" Version="0.39.3--0032-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.0" />
+    <PackageReference Include="CK.IO.Auth" Version="0.40.0" />
   </ItemGroup>
 </Project>
