--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Cris" Version="0.40.0" />
-    <PackageReference Include="CK.PerfectEvent" Version="26.0.0" />
+    <PackageReference Include="CK.Cris" Version="0.40.1--0001-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="26.0.1--0001-develop" />
   </ItemGroup>
 </Project>
