CI build: Upgrading dependencies:
NuGet:CK.Cris/0.41.2--0001-develop
NuGet:CK.IO.DelayedCommand/0.41.2--0001-develop
NuGet:CK.Auth.Abstractions/11.0.2--0003-develop
NuGet:CK.IO.Auth/0.41.2--0001-develop
NuGet:CK.IO.Auth.Basic/0.41.2--0001-develop
NuGet:CK.AppIdentity/0.11.2--0003-develop
NuGet:CK.Poco.Exc.Json/32.0.1--0001-develop
NuGet:CK.Testing.StObjEngine/32.0.1--0001-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.Testing.StObjEngine/32.0.1--0001-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.Cris/0.41.2--0001-develop
NuGet:CK.CodeGen/14.0.2--0003-develop
NuGet:CK.StObj.Runtime/32.0.1--0001-develop
NuGet:CK.Cris/0.41.2--0001-develop
NuGet:CK.PerfectEvent/26.0.2--0003-develop
NuGet:CK.Auth.Abstractions/11.0.2--0003-develop
NuGet:CK.Testing.StObjEngine/32.0.1--0001-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop.

--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.1" />
-    <PackageReference Include="CK.IO.Auth" Version="0.41.1" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.2--0003-develop" />
+    <PackageReference Include="CK.IO.Auth" Version="0.41.2--0001-develop" />
   </ItemGroup>
 </Project>
