Releasing 0.42.0. Upgrading release dependencies: NuGet:CK.Cris/0.42.0, NuGet:CK.IO.DelayedCommand/0.42.0, NuGet:CK.Auth.Abstractions/11.0.2, NuGet:CK.IO.Auth/0.42.0, NuGet:CK.IO.Auth.Basic/0.42.0, NuGet:CK.AppIdentity/0.12.0, NuGet:CK.Poco.Exc.Json/32.1.0, NuGet:CK.Testing.StObjEngine/32.1.0, NuGet:CK.Testing.Nunit/14.1.0, NuGet:CK.Testing.StObjEngine/32.1.0, NuGet:CK.Testing.Nunit/14.1.0, NuGet:CK.Cris/0.42.0, NuGet:CK.CodeGen/14.0.2, NuGet:CK.StObj.Runtime/32.1.0, NuGet:CK.Cris/0.42.0, NuGet:CK.PerfectEvent/26.0.2, NuGet:CK.Auth.Abstractions/11.0.2, NuGet:CK.Testing.StObjEngine/32.1.0, NuGet:CK.Testing.Nunit/14.1.0.

--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.2--0006-develop" />
-    <PackageReference Include="CK.IO.Auth" Version="0.41.2--0004-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.2" />
+    <PackageReference Include="CK.IO.Auth" Version="0.42.0" />
   </ItemGroup>
 </Project>
