--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,9 +4,9 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.2--0006-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="32.0.1--0004-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="14.0.2--0008-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="11.0.2" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="32.1.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="14.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
   </ItemGroup>
