Releasing 0.42.1. Upgrading release dependencies: NuGet:CK.Cris/0.42.1, NuGet:CK.IO.DelayedCommand/0.42.1, NuGet:CK.Auth.Abstractions/11.0.2, NuGet:CK.IO.Auth/0.42.1, NuGet:CK.IO.Auth.Basic/0.42.1, NuGet:CK.AppIdentity/0.12.0, NuGet:CK.Poco.Exc.Json/32.1.1, NuGet:CK.Testing.StObjEngine/32.1.1, NuGet:CK.Testing.Nunit/14.1.0, NuGet:CK.Testing.StObjEngine/32.1.1, NuGet:CK.Testing.Nunit/14.1.0, NuGet:CK.Cris/0.42.1, NuGet:CK.CodeGen/14.0.2, NuGet:CK.StObj.Runtime/32.1.1, NuGet:CK.Cris/0.42.1, NuGet:CK.PerfectEvent/26.0.2, NuGet:CK.Auth.Abstractions/11.0.2, NuGet:CK.Testing.StObjEngine/32.1.1, NuGet:CK.Testing.Nunit/14.1.0.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Cris" Version="0.42.1--0001-develop" />
-    <PackageReference Include="CK.CodeGen" Version="14.0.3--0002-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="32.1.1--0002-develop" />
+    <PackageReference Include="CK.Cris" Version="0.42.1" />
+    <PackageReference Include="CK.CodeGen" Version="14.0.2" />
+    <PackageReference Include="CK.StObj.Runtime" Version="32.1.1" />
   </ItemGroup>
 </Project>
